# perplexio-backend

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  RustConfig  docker-compose.yml  docker-deploy.sh  example.env  rust-toolchain
migrations/2018-11-07-163218_create_games/: up.sql
migrations/2018-11-07-163235_create_users/: up.sql
migrations/2018-11-15-234536_add_words_col_to_games/: down.sql  up.sql
migrations/2018-11-16-000200_set_user_id_as_foreign_key_in_games/: down.sql  up.sql
migrations/2018-11-23-215025_add_duration_fields_to_games/: down.sql  up.sql
migrations/2018-12-01-191612_add_solutions_table/: down.sql  up.sql
migrations/2018-12-07-202825_add_game_participation_table/: down.sql  up.sql
migrations/2019-01-20-222327_add_published_to_games/: down.sql  up.sql
migrations/2019-02-26-214521_add_duration_col_to_participations/: down.sql  up.sql
migrations/2019-03-14-122605_normalise_games/: down.sql  up.sql
migrations/2019-05-12-202150_fix_solution_contraint/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/controller/: games.rs  mod.rs  participations.rs  solutions.rs  users.rs
src/controller/games/: get_games.rs  mod.rs  post_games.rs
src/entity/: game_entities.rs  mod.rs  puzzle_entities.rs
src/fairing/: mod.rs
src/graphql/: games.rs  mod.rs  mutation.rs  participations.rs  puzzles.rs  query.rs  solutions.rs
src/guard/: mod.rs
src/handler/: mod.rs  participations.rs  solutions.rs  users.rs
src/handler/games/: get_games.rs  mod.rs  post_games.rs
src/model/: game.rs  mod.rs  paginated.rs  participation.rs  puzzle.rs  solution.rs  user.rs  vector.rs
src/service/: auth.rs  config.rs  db_client.rs  mod.rs  pagination.rs
