[package]
name = "perplexio"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_cors = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
oauth2 = "1.3.0"
url = "1.0"
reqwest = "0.9.4"
regex = "1"
dotenv = "0.9.0"
rand = "0.6.0-pre.1"
log = "0.4"
chrono = { version = "0.4", features=["serde"] }
diesel = { version = "1.0.0", features = ["postgres", "chrono", "serde_json"] }

[dependencies.postgres]
version = "0.15"
features = ["with-serde_json", "with-chrono"]

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
