[package]
name = "perplexio"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
oauth2 = "1.3.0"
url = "1.0"
reqwest = "0.9.4"
regex = "1"
dotenv = "0.9.0"
rand = "0.6.0-pre.1"
log = "0.4"
chrono = { version = "0.4", features=["serde"] }
juniper = "0.11"
simple_logger = "1.0.1"
arrayvec = "0.4"
actix-web = "1.0.0-beta.3"
actix = "0.7"
futures = "0.1"

[dependencies.diesel]
version = "1.4.1"
features = ["postgres", "chrono", "serde_json", "r2d2"]

[dependencies.postgres]
version = "0.15"
features = ["with-serde_json", "with-chrono"]

